# UE5-Graph-Text-Graph

./: .gitignore  J2B_FORMAT.md  LLM_PROMPT_RULES.md  README.md  README.zh.md  index.html  package-lock.json  package.json  rename.cjs  test_blueprint.j2b  ts_errors.txt  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BlueprintNode.tsx  HomeTab.tsx  JsonPanel.tsx  TitleBar.tsx
src/components/nodes/: BlueprintNode.tsx  MaterialNode.tsx  NiagaraNode.tsx
src/themes/: index.ts
