[package]
name = "Json2Board"
version = "0.0.1"
description = "Blueprint Visualizer — render JSON as UE5-style blueprint node graphs"
authors = ["Json2Board"]
edition = "2021"

[[bin]]
name = "Json2Board"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8" }
mime_guess = "2"
serde_json = "1"
