[package]
name = "UE5-GTG"
version = "0.1.0"
description = "UE5-Graph-Text-Graph — Blueprint bidirectional compiler"
authors = ["UE5-Graph-Text-Graph"]
edition = "2021"

[[bin]]
name = "UE5-Graph-Text-Graph"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = { version = "8" }
mime_guess = "2"
serde_json = "1"

[build-dependencies]
winres = "0.1"
